force-app/main/default/objects/custom_create205__c/custom_create205__c.object-meta.xml
<CustomObject>
    <label>Custom created object205</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects205</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>