force-app/main/default/objects/custom_create205__c/fields/custom_create_205field713__c.field-meta.xml
<CustomField>
    <fullName>custom_create_205field713__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 205field713</label>
    <type>Checkbox</type>
</CustomField>