force-app/main/default/objects/custom_create205__c/fields/custom_create_205field722__c.field-meta.xml
<CustomField>
    <fullName>custom_create_205field722__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 205field722</label>
    <type>Checkbox</type>
</CustomField>